feat: Listagem e cadastro de clientes
- Criação da listagem de clientes, páginas e funções necessárias
- Criação do cadastro de clientes, páginas e funções necessárias.

--- a/Sistema De Orçamentos/Views/Shared/_Layout.cshtml
+++ b/Sistema De Orçamentos/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Sistema_De_Orçamentos</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Orçamentos de Serviços</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,11 +20,40 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#" id="clientesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Clientes
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="clientesDropdown">
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Cliente" asp-action="List">Listar Clientes</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Cliente" asp-action="Create">Cadastrar Cliente</a>
+                                </li>
+                            </ul>
                         </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-light" href="#" id="orcamentosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Orçamentos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="orcamentosDropdown">
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Orcamento" asp-action="Create">Criar Orçamento</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Orcamento" asp-action="List">Listar Orçamentos</a>
+                                </li>
+                            </ul>
+                        </li>
+
+@*                         <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li> *@
                     </ul>
                 </div>
             </div>
@@ -38,7 +67,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Sistema_De_Orçamentos - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Orçamentos de Serviços
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
